--- a/src/components/TagList.astro
+++ b/src/components/TagList.astro
@@ -1,8 +1,8 @@
 ---
-const { names } = Astro.props;
+const { names, className } = Astro.props;
 ---
 
-<div>
+<div class={className}>
     {
         names.map((name: string) => (
             <span class:list={[name]}>
@@ -15,21 +15,28 @@ const { names } = Astro.props;
 <style>
     div {
         margin-bottom: 2rem;
-        text-align: center;
     }
     span {
+        color: var(--color-text);
         padding: 0.4rem 0.5rem;
         border: 1rem;
         border-radius: 1rem;
         font-weight: bold;
         margin-right: 0.4rem;
     }
+    .oi {
+        background-color: tomato;
+    }
     .golang { background-color: #00a8d7; }
     .ubuntu { background-color: #2B0D25; }
+    .linux {background-color: #55a7cc}
     .python {
         background: rgb(70,130,178);
         background: linear-gradient(90deg, rgba(70,130,178,1) 0%, rgba(255,212,54,1) 100%);
     }
-    .javascript { color: var(--color-black); background-color: #fbfb5e; }
+    .javascript { 
+        color: var(--color-black); 
+        background-color: #fbfb5e;
+    }
 </style>
 
