--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -1,5 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
+import TagList from './TagList.astro';
 
 const posts = await getCollection("blog")
 posts.sort((a, b) => {
@@ -14,19 +15,18 @@ posts.sort((a, b) => {
                 <a href={`/blog/${post.slug}`}>
                     <h2>{post.data.title}</h2>
                     <p>{post.data.description}</p>
+                    {post.data.tags && <TagList names={post.data.tags} />}
                 </a> 
             </li>
         ))
     } 
 </ul>
 
-
 <style>
-    h1 {
-        text-align: center;
-        margin-top: 2rem;
+    h2 {
+        margin-bottom: 0;
     }
-
+    
     p {
         margin-top: 0;
     }
@@ -35,23 +35,17 @@ posts.sort((a, b) => {
         list-style: none;
         padding: 0;
     }
-    ul li {
-        margin: 0 0.5rem;
-        position: relative;
-        text-align: left;
-        margin-bottom: 3rem;
-    }
 
     ul li a{
+        color: var(--color-shadow);
         text-decoration: none;
     }
 
     ul li a:hover h2 {
         text-decoration: underline;
-        font-weight: 400;
         text-decoration-style: dashed;
         text-decoration-thickness: 1px;
         text-underline-offset: 2px;
+        text-underline-offset: 0.3rem;
     }
 </style>
-
