--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,37 +19,23 @@ const { description } = Astro.props;
 	</head>
 	<body>
 		<header>
-			<div class="wrapper">
-				<div class="logo full-center"><a href="/"><Logo /></a></div>
-				<nav class="full-center">
-					<ul>
-						<li><a href="/projects">Projetos</a></li>
-					</ul>
-				</nav>
-			</div>
+			<div class="logo full-center"><a href="/"><Logo /></a></div>
+			<nav class="full-center">
+				<ul>
+					<li><a href="/projects">Projetos</a></li>
+				</ul>
+			</nav>
 		</header>
 		<main>
-			<div class="wrapper">
 				<slot />
-			</div>
 		</main>
 	</body>
 </html>
 
 <style>
 	header {
-		height: 6.5rem;
-		background-color: transparent;
-		box-shadow: inset -1px -1px 9px -7px rgb(157 157 157 / 40%);
-		
+		padding: 2rem 1rem 0 1rem;
 	}
-
-	header .wrapper {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-	}
-
 	header .logo {
 		width: 150px;
 		height: 6.5rem;
@@ -61,9 +47,6 @@ const { description } = Astro.props;
 		display: flex;
 	}
 
-	header nav {
-		height: 6.5rem;
-	}
 	header nav a {
 		font-weight: bold;
 	}
@@ -91,19 +74,11 @@ const { description } = Astro.props;
 		cursor: pointer;
 		color: var(--color-white);
 	}
-
+	
 	main {
 		height: calc(100% - 6rem);
    		min-height: calc(100% - 6rem);
+		padding: 0 1rem;
 	}
 
-	main .wrapper {
-		padding-bottom: 4rem;
-	}
-
-	.full-center {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
 </style>
